Fix a white-space wrapping bug for long service names

--- a/cas-server-webapp/src/main/webapp/css/cas.css
+++ b/cas-server-webapp/src/main/webapp/css/cas.css
@@ -511,7 +511,7 @@ footer a:link, footer a:visited {
     font-weight: lighter;
     text-align: center;
     vertical-align: middle;
-    white-space: nowrap;
+    white-space: normal;
     word-wrap: normal;
 }
 
